--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
             
             <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
               <h5 class="text-uppercase mb-4 font-weight-bold">Follow Us</h5>
-              <a href="#" class="text-white"><i class="fab fa-facebook-f mr-4"></i></a>
+              <a href="https://www.facebook.com/pardo.adrian.08/" class="text-white"><i class="fab fa-facebook-f mr-4"></i></a>
               <a href="#" class="text-white"><i class="fab fa-twitter mr-4"></i></a>
               <a href="#" class="text-white"><i class="fab fa-instagram mr-4"></i></a>
               <a href="#" class="text-white"><i class="fab fa-linkedin mr-4"></i></a>
